chore: mvp js
Signed-off-by: Sam Gammon <sam@elide.dev>